# indonesian_script

./: =0.12.0  =0.4.6  Cargo.toml  MANIFEST.in  README.md  auto_save.sh  err.txt  interpreter.py  is-run  requirements.txt  setup.py  test.is
indonesian_script/: License  __init__.py  __main__.py  grammar.txt  main.py
indonesian_script.egg-info/: PKG-INFO  SOURCES.txt
indonesian_script/Compiler/: PyCompiler.py  __init__.py  structure.py
indonesian_script/Interpreter/: ListHelpper.md  __init__.py  interpreter.py  transformer.py
indonesian_script/Interpreter/AST_node/: __init__.py  ast_nodes.py
indonesian_script/Interpreter/Builtins/: KEYWORD.py  TYPES.py  __init__.py  builtins.py  checking_type.py
indonesian_script/Interpreter/Builtins/Built-ins/: inisiasi.is
indonesian_script/Interpreter/Builtins/Built-ins/modul/: jangkauan.is  objek.is
indonesian_script/Interpreter/Exceptions/: Exceptions.py  exceptions.py
indonesian_script/Interpreter/Helper/: Statement.md
indonesian_script/Interpreter/Helpper/: Fungsi.md  Tipe.md  VarDanKonst.md
indonesian_script/Tester/: Utama.is  compile.sh  math_module.py  utama.py
indonesian_script/bridge/: __init__.py  module.py
indonesian_script/cli/: __init__.py  _argparse.py  _repl.py  main.py
is.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: grammar.lalrpop  grammar.rs  main.rs
src/lib/: interpreter.rs  mod.rs  scope.rs  transformer.rs  utils.rs  variable.rs
